Thu Jun 27 09:25:19 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/man.c (get_preprocessors_from_file): Return a non-const string
	  rather than keeping a static copy.
	  (get_preprocessors): Return a non-const string.
	  (make_roff_command): Free the return value of get_preprocessors
	  before returning.

Thu Jun 27 08:39:26 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/manconv_client.c (add_manconv): Don't allocate codes until
	  after checking for the UTF-8/UTF-8 early-return case.

Thu Jun 27 00:09:48 BST 2013  Colin Watson  <cjwatson@debian.org>

	* lib/encodings.c (find_charset_locale): Fix memory leaks.

Thu Jun 27 00:07:09 BST 2013  Peter Schiffer <pschiffe@redhat.com>

	* src/check_mandirs.c (testmandirs): Check return value of chdir.

Wed Jun 26 22:41:22 BST 2013  Peter Schiffer <pschiffe@redhat.com>

	* lib/encodings.c (find_charset_locale): Fall back to C.UTF-8 then
	  en_US.UTF-8 if /usr/share/i18n/SUPPORTED does not exist, the
	  requested character set is UTF-8, and the current LC_CTYPE locale
	  is not UTF-8 (Fedora bug #657409).
	* src/tests/man-6: New file.
	* src/tests/Makefile.am (ALL_TESTS): Add man-6.
	* NEWS: Document this.

Wed Jun 26 22:33:00 BST 2013  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Move check for whether nroff supports warning
	  control down below check for whether troff is groff, otherwise it
	  always returns false.  Reported by Niels Thykier.
	* NEWS: Document this.

Sun Jun 23 22:50:24 BST 2013  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.4.

Sun Jun 23 22:44:19 BST 2013  Colin Watson  <cjwatson@debian.org>

	Upgrade to Gnulib 20130623.

Sun Jun 23 21:21:13 BST 2013  Peter Schiffer  <pschiffe@redhat.com>
                              Colin Watson  <cjwatson@debian.org>

	Search the full manpath when expanding manual pages that consist
	only of a .so directive (Fedora bug #693458).

	* src/ult_src.c (find_include): New function, handling manpath
	  search where necessary.