@@ -1,3 +1,12 @@
+Thu Jun 27 09:38:35 BST 2013  Colin Watson  <cjwatson@debian.org>
+
+	* src/manp.c (add_nls_manpaths): Duplicate manpathlist in the case
+	  where locales is NULL or empty, allowing the manpathlist parameter
+	  to be made const.
+	* src/manp.h (add_nls_manpaths): Update prototype.
+	* src/man.c (locale_manpath): Make manpath parameter const.
+	* src/whatis.c (locale_manpath): Likewise.
+
 Thu Jun 27 09:25:19 BST 2013  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (get_preprocessors_from_file): Return a non-const string
